<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.MainActivity">

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/image_bater"
        android:scaleType="centerCrop"
        android:src="@drawable/back_ground" />

    <include
        layout="@layout/buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="end" />

    <RadioGroup
        android:id="@+id/radioButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonMaterialComponentsMyStyle"
            style="@style/RadioStyle"
            android:layout_width="@dimen/radio_button_width"
            android:text="@string/my_style" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonMaterialComponentsDark"
            style="@style/RadioStyle"
            android:layout_width="wrap_content"
            android:text="@string/dark_theme" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonMaterialComponentsLight"
            style="@style/RadioStyle"
            android:layout_width="wrap_content"
            android:text="@string/light_theme" />
    </RadioGroup>


</FrameLayout>